# ORION

./: .gitignore  Dockerfile  PROJECT_PLAN.md  README.md  dataset_annotation_schema.json  docker-compose.yml  feature_catalog.md  model_contract.example.json  model_development.md  portrait_mesh_schema.md  portrait_project_revision_v_2.md  pyproject.toml  requirements-model.txt  requirements.txt
apps/: README.md  __init__.py
data1_reports/: frame000100_portrait.json  frame000150_portrait.json  frame000300_portrait.json  frame000400_portrait.json  frame000450_portrait.json  frame000500_portrait.json  frame000550_portrait.json  frame000600_portrait.json  frame000850_portrait.json  frame000950_portrait.json  frame001100_portrait.json  frame001300_portrait.json  frame001400_portrait.json  frame001450_portrait.json  frame001500_portrait.json  frame001600_portrait.json  frame001800_portrait.json  frame002050_portrait.json  frame002250_portrait.json  frame002300_portrait.json  frame002400_portrait.json  frame002650_portrait.json  frame002750_portrait.json  frame002850_portrait.json  frame002950_portrait.json  frame003050_portrait.json  frame003250_portrait.json  frame003350_portrait.json  frame003600_portrait.json  frame003800_portrait.json  frame003850_portrait.json  frame004100_portrait.json  frame004800_portrait.json  frame004850_portrait.json  frame005000_portrait.json  frame005050_portrait.json  frame006000_portrait.json  frame006150_portrait.json  frame006200_portrait.json  frame006450_portrait.json  (+281 more)
dataset_builder_output/: summary.json
docs/: Archive_Model.md  (+5 more)
(+3178 files in other folders)
